<resources>
    <string name="app_name">Invest</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="main_button_edit_fund_record">Edit Fund Record</string>
    <string name="main_button_list_funds">List Funds</string>

    <string name="fund_list_action_add">添加基金账户</string>
    <string name="fund_list_text_total_asset">总资产</string>
    <string name="fund_list_text_total_asset_value">5,000,000.00</string>
    <string name="fund_list_text_label_fund">名称/总资产</string>
    <string name="fund_list_text_label_profit">持有收益</string>

    <string name="fund_edit_action_search">搜索</string>
    <string name="fund_edit_hint_search">请输入基金代码或名称</string>

    <string name="fund_list_text_item_1_title">博时标普500ETF联接</string>
    <string name="fund_list_text_item_1_asset">8,144.15</string>
    <string name="fund_list_text_item_1_profit">+509.83</string>
    <string name="fund_list_text_item_1_rate">+6.68%</string>

    <string name="fund_list_text_item_2_title">达成纳斯达克100指数</string>
    <string name="fund_list_text_item_2_asset">10,459.29</string>
    <string name="fund_list_text_item_2_profit">+1,072.57</string>
    <string name="fund_list_text_item_2_rate">+11.43%</string>

    <string name="fund_list_text_item_3_title">大成中证红利指数A</string>
    <string name="fund_list_text_item_3_asset">12,024.85</string>
    <string name="fund_list_text_item_3_profit">-16.58</string>
    <string name="fund_list_text_item_3_rate">-0.14%</string>

    <string name="fund_view_action_record_buy">买入记录</string>
    <string name="fund_view_action_record_sell">卖出记录</string>
    <string name="fund_view_action_record_bonus">分红记录</string>
    <string name="fund_view_text_total_amount">总金额</string>
    <string name="fund_view_text_total_amount_value">8,144.15</string>
    <string name="fund_view_text_profit">持有收益</string>
    <string name="fund_view_text_profit_value">+509.83</string>
    <string name="fund_view_text_xirr">XIRR 收益率</string>
    <string name="fund_view_text_xirr_value">+6.68%</string>
    <string name="fund_view_text_net_value">最新净值</string>
    <string name="fund_view_text_net_value_value">2.5763(01-22)</string>
    <string name="fund_view_text_share">持有份额</string>
    <string name="fund_view_text_share_value">3,161.18</string>
    <string name="fund_view_text_net_value_chart">净值走势</string>
    <string name="fund_view_text_profit_chart">收益统计</string>
    <string name="fund_view_text_record_list">交易记录</string>
    <string name="fund_view_text_holder">%1$s%2$s</string>
    <string name="fund_view_text_highlight_net_value">净值 %1$s</string>
    <string name="fund_view_button_period_3_months">近三月</string>
    <string name="fund_view_button_period_6_months">近半年</string>
    <string name="fund_view_button_period_1_year">近一年</string>
    <string name="fund_view_button_period_3_years">近三年</string>

    <string name="fund_record_edit_text_fund_code">基金名称</string>
    <string name="fund_record_edit_text_confirm_date">确认日期</string>
    <string name="fund_record_edit_hint_confirm_date">请选择确认日期</string>
    <string name="fund_record_edit_text_amount">确认金额</string>
    <string name="fund_record_edit_text_net_value">确认净值</string>
    <string name="fund_record_edit_text_share">确认份额</string>
    <string name="fund_record_edit_text_fee">手续费</string>
    <string name="fund_record_edit_button_save">保存</string>
</resources>
