<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FundListActivity">

    <TextView
        android:id="@+id/fund_list_text_total_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fund_list_text_total_asset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fund_list_text_total_asset_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/fund_list_text_total_asset_value"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fund_list_text_total_asset" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fund_list_layout_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fund_list_text_total_asset_value">

        <TextView
            android:id="@+id/fund_list_text_label_fund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fund_list_text_label_fund"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_label_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fund_list_text_label_profit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fund_list_layout_item_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple"
        android:onClick="showFund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fund_list_layout_label">

        <TextView
            android:id="@+id/fund_list_text_item_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fund_list_text_item_1_title"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_item_1_asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fund_list_text_item_1_asset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fund_list_text_item_1_title" />

        <TextView
            android:id="@+id/fund_list_text_item_1_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fund_list_text_item_1_profit"
            android:textAlignment="textEnd"
            android:textColor="@color/textUp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fund_list_text_item_1_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_item_1_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fund_list_text_item_1_rate"
            android:textAlignment="textEnd"
            android:textColor="@color/textUp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fund_list_text_item_1_asset"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fund_list_layout_item_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fund_list_layout_item_1">

        <TextView
            android:id="@+id/fund_list_text_item_2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fund_list_text_item_2_title"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_item_2_asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fund_list_text_item_2_asset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fund_list_text_item_2_title" />

        <TextView
            android:id="@+id/fund_list_text_item_2_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fund_list_text_item_2_profit"
            android:textAlignment="textEnd"
            android:textColor="@color/textUp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fund_list_text_item_2_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_item_2_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fund_list_text_item_2_rate"
            android:textAlignment="textEnd"
            android:textColor="@color/textUp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fund_list_text_item_2_asset"
            app:layout_constraintEnd_toEndOf="parent" />
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fund_list_layout_item_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fund_list_layout_item_2">

        <TextView
            android:id="@+id/fund_list_text_item_3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fund_list_text_item_3_title"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_item_3_asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fund_list_text_item_3_asset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fund_list_text_item_3_title" />

        <TextView
            android:id="@+id/fund_list_text_item_3_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fund_list_text_item_3_profit"
            android:textAlignment="textEnd"
            android:textColor="@color/textDown"
            app:layout_constraintBaseline_toBaselineOf="@+id/fund_list_text_item_3_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fund_list_text_item_3_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/fund_list_text_item_3_rate"
            android:textAlignment="textEnd"
            android:textColor="@color/textDown"
            app:layout_constraintBaseline_toBaselineOf="@+id/fund_list_text_item_3_asset"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>