<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fund_view_holder_profit_chart"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginTop="@dimen/marginSmall"
        android:background="@color/background"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/fund_view_button_periods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:layout_marginBottom="@dimen/marginSmall"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintTop_toBottomOf="@+id/fund_view_holder_profit_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/ToggleButton"
            android:id="@+id/fund_view_button_period_3_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_view_button_period_3_months" />
        <com.google.android.material.button.MaterialButton
            style="@style/ToggleButton"
            android:id="@+id/fund_view_button_period_6_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_view_button_period_6_months" />
        <com.google.android.material.button.MaterialButton
            style="@style/ToggleButton"
            android:id="@+id/fund_view_button_period_1_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_view_button_period_1_year" />
        <com.google.android.material.button.MaterialButton
            style="@style/ToggleButton"
            android:id="@+id/fund_view_button_period_3_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_view_button_period_3_years" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
