<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fund_view_holder_net_value_chart"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/background"
        android:gravity="center"
        android:text="Chart"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fund_view_button_period_3_months"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fund_view_button_period_3_months"
        app:layout_constraintEnd_toStartOf="@+id/fund_view_button_period_6_months"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fund_view_holder_net_value_chart"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/fund_view_button_period_6_months"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fund_view_button_period_6_months"
        app:layout_constraintBaseline_toBaselineOf="@+id/fund_view_button_period_3_months"
        app:layout_constraintEnd_toStartOf="@+id/fund_view_button_period_1_year"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fund_view_button_period_3_months" />

    <Button
        android:id="@+id/fund_view_button_period_1_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fund_view_button_period_1_year"
        app:layout_constraintBaseline_toBaselineOf="@+id/fund_view_button_period_6_months"
        app:layout_constraintEnd_toStartOf="@+id/fund_view_button_period_3_years"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fund_view_button_period_6_months" />

    <Button
        android:id="@+id/fund_view_button_period_3_years"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/fund_view_button_period_3_years"
        app:layout_constraintBaseline_toBaselineOf="@+id/fund_view_button_period_1_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fund_view_button_period_1_year" />

</androidx.constraintlayout.widget.ConstraintLayout>
